--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Canvas Practise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
-    canvas
     <Canvas></Canvas>
 </body>
 </html>
