show and hide circles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="main.js" defer></script>
 </head>
 <body>
+    <div class="toggle">Show outside circles</div>
     <Canvas></Canvas>
 </body>
 </html>
