added amount of circles slider

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <div class="toggle">Show outside circles</div>
+    <div class="options">
+        <div class="toggle">Show outside circles</div>
+        <p class="amount">Amout of circles:</p>
+        <input id="slider" type="range" min="1" max="100" value="50" class="slider" id="myRange">
+    </div>
     <Canvas></Canvas>
 </body>
 </html>
